<resources>
    <string name="app_name">journalApp</string>
    <string name="welcome_again">Welcome Again!</string>
    <string name="this_is_where_your_notes_will_be">this is where your notes will be</string>
    <string name="account_login">you already have an account?Login</string>
    <string name="register">Register</string>
    <string name="full_name">full name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="user_name">user name</string>
    <string name="new_note">New Note</string>
    <string name="best_day_ever">Best Day ever</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
                 blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium </string>
    <string name="_22_10_2023">22.10.2023</string>
    <string name="note_decription">This is where your note will be.It’ll be housed here.You’ll save your note here. Type your memories here. Write down your thoughts.</string>
    <string name="enter_title_of_note">Enter Title of Note..</string>
    <string name="back">Back</string>
</resources>