<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edit_login"
    android:padding="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/noteTitleTv"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:text="@string/best_day_ever"
        android:fontFamily="@font/ranade_medium"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:id="@+id/noteDescTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:fontFamily="@font/ranade_regular"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="#667085"
        android:contentDescription="@string/app_name"
        />
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageNoteTv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/pic"
        android:scaleType="centerCrop"
        app:riv_corner_radius="8dip"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/noteDateTv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/_22_10_2023"
        android:fontFamily="@font/ranade_regular"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:contentDescription="@string/app_name"
        />

</LinearLayout>